# galaxpy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  jupiter.cpp  run_tests.py  setup.py
src/: asteroid.cpp  asteroid.hpp  jupiter.cpp  object_file.hpp  pluto.cpp  pluto.hpp  pydevice.cpp  pydevice.hpp  saturn.cpp
tests/: .test_saturn.py.swp  __init__.py  test_devices.py  test_jupiter.py  test_pluto.py  test_saturn.py
